--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://15.206.89.181/:9000/</sonar.host.url>
+		<sonar.host.url>http://15.206.89.181:9000/</sonar.host.url>
                 <sonar.login>99b88aa2aff399e147ae2aebc64a6a006fb2468f</sonar.login>
 		
              
